// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should match snapshot 1`] = `
.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c4:focus {
  color: #231B22;
}

.c4:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c4:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c4:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4:focus::-moz-placeholder {
  color: #6B6B78;
}

.c4:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c4:focus::placeholder {
  color: #6B6B78;
}

.c4:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c3 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c3:hover:not(:disabled),
.c3:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c2 {
  box-sizing: border-box;
  width: 320px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1:hover fieldset {
  border-color: #231B22;
}

.c5 {
  pointer-events: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-right: 16px;
  padding-top: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c10 {
  fill: #6B6B78;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <fieldset
          class="c3"
          label="Find an activity to love"
          value=""
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            class="c4 c5"
            id="downshift-0-input"
            label="Find an activity to love"
            readonly=""
            value=""
          />
          <label
            class="c6"
          >
            Find an activity to love
          </label>
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Find an activity to love
            </span>
          </legend>
        </fieldset>
      </div>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c9"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c10"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when disabled 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c4 {
  pointer-events: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-right: 16px;
  padding-top: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: not-allowed;
}

.c9 {
  fill: #6B6B78;
  fill: #D7D7E0;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c0"
    role="combobox"
  >
    <div
      class=""
      disabled=""
    >
      <div
        class="c1"
      >
        <fieldset
          class="c2"
          disabled=""
          label="Find an activity to love"
          value=""
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            class="c3 c4"
            disabled=""
            id="downshift-1-input"
            label="Find an activity to love"
            readonly=""
            value=""
          />
          <label
            class="c5"
            disabled=""
          >
            Find an activity to love
          </label>
          <legend
            class="c6"
          >
            <span
              class="c7"
            >
              Find an activity to love
            </span>
          </legend>
        </fieldset>
      </div>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c8"
        data-toggle="true"
        disabled=""
        role="button"
        type="button"
      >
        <svg
          class="c9"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when full 1`] = `
.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c4:focus {
  color: #231B22;
}

.c4:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c4:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c4:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4:focus::-moz-placeholder {
  color: #6B6B78;
}

.c4:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c4:focus::placeholder {
  color: #6B6B78;
}

.c4:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c3 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c3:hover:not(:disabled),
.c3:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

.c1:hover fieldset {
  border-color: #231B22;
}

.c5 {
  pointer-events: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-right: 16px;
  padding-top: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c10 {
  fill: #6B6B78;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <fieldset
          class="c3"
          label="Find an activity to love"
          value=""
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-2-label"
            autocomplete="off"
            class="c4 c5"
            id="downshift-2-input"
            label="Find an activity to love"
            readonly=""
            value=""
          />
          <label
            class="c6"
          >
            Find an activity to love
          </label>
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Find an activity to love
            </span>
          </legend>
        </fieldset>
      </div>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c9"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c10"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when has a selected value 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3 ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
}

.c3 ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #231B22;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c4 {
  pointer-events: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-right: 16px;
  padding-top: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: not-allowed;
}

.c9 {
  fill: #6B6B78;
  fill: #D7D7E0;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    class="c0"
    role="combobox"
  >
    <div
      class=""
      disabled=""
    >
      <div
        class="c1"
      >
        <fieldset
          class="c2"
          disabled=""
          label="Find an activity to love"
          value="Swimming"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-3-label"
            autocomplete="off"
            class="c3 c4"
            disabled=""
            id="downshift-3-input"
            label="Find an activity to love"
            readonly=""
            value="Swimming"
          />
          <label
            class="c5"
            disabled=""
          >
            Find an activity to love
          </label>
          <legend
            class="c6"
          >
            <span
              class="c7"
            >
              Find an activity to love
            </span>
          </legend>
        </fieldset>
      </div>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c8"
        data-toggle="true"
        disabled=""
        role="button"
        type="button"
      >
        <svg
          class="c9"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot with error 1`] = `
.c4 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c4:focus {
  color: #231B22;
}

.c4:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c4:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c4:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4:focus::-moz-placeholder {
  color: #6B6B78;
}

.c4:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c4:focus::placeholder {
  color: #6B6B78;
}

.c4:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
}

.c4::-webkit-input-placeholder {
  color: #6B6B78;
}

.c4::-moz-placeholder {
  color: #6B6B78;
}

.c4:-ms-input-placeholder {
  color: #6B6B78;
}

.c4::placeholder {
  color: #6B6B78;
}

.c4 ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
}

.c4 ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
}

.c4[type="number"]::-webkit-outer-spin-button,
.c4[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c4:invalid {
  box-shadow: none;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 4px;
  color: #FF874C;
}

.c12 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: currentColor;
  font-size: 12px;
}

.c3 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #231B22;
}

.c3:hover:not(:disabled),
.c3:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c7 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c8 {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c2 {
  box-sizing: border-box;
  width: 320px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 fieldset {
  border-color: #231B22;
  border-color: #FF874C;
}

.c1:hover fieldset {
  border-color: #FF874C;
}

.c5 {
  pointer-events: none;
}

.c5 ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-right: 16px;
  padding-top: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c10 {
  fill: #6B6B78;
  fill: #231B22;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <fieldset
          class="c3"
          label="Find an activity to love"
          value="Swimming"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-4-label"
            autocomplete="off"
            class="c4 c5"
            id="downshift-4-input"
            label="Find an activity to love"
            readonly=""
            value="Swimming"
          />
          <label
            class="c6"
          >
            Find an activity to love
          </label>
          <legend
            class="c7"
          >
            <span
              class="c8"
            >
              Find an activity to love
            </span>
          </legend>
        </fieldset>
      </div>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c9"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c10"
          height="20"
          width="20"
        />
      </button>
    </div>
    <div
      class="c11"
    >
      <span
        class="c12"
      >
        Please, select one activity
      </span>
    </div>
  </div>
</div>
`;
